[tool.poetry]
name = "promptedgraphs"
version = "0.3.1"
description = "From Dataset Labeling to Deployment: The Power of NLP and LLMs Combined."
authors = ["Sean Kruzel <sean@closedloop.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "promptedgraphs" }]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Repository" = "https://github.com/closedLoop-technologies/promptedgraphs"
"Bug Tracker" = "https://github.com/closedLoop-technologies/promptedgraphs/issues"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.1"
twine = "^4.0.2"
gcloud = "^0.18.3"
typer = "^0.9.0"
pyfiglet = "^1.0.2"
termcolor = "^2.3.0"
tabulate = "^0.9.0"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
dataclasses-json = "^0.6.0"
pydantic = "^2.3.0"
tiktoken = "^0.5.1"
sse-starlette = "^1.6.5"
httpx = "^0.25.0"
spacy = "^3.6.1"
googlemaps = "^4.10.0"
beautifulsoup4 = "^4.12.2"
pydantic-settings = "^2.0.3"
seaborn = "^0.13.2"
nltk = "^3.8.1"
transformers = "^4.37.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
eradicate = "^2.2.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit-hooks = "^4.4.0"
pre-commit = "^3.3.2"
pycodestyle = "^2.10.0"
pyflakes = "^3.0.1"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
radon = "^6.0.1"
vulture = "^2.7"
pip-upgrader = "^1.4.15"
pyupgrade = "^3.4.0"
ipykernel = "^6.25.2"

[tool.poetry.scripts]
promptedgraphs = "promptedgraphs.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
